--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -7,4 +7,6 @@ jobs:
       - name: print greeting
         run: echo "hello world"
       - name: print goodbye
-        run: echo "good bye"
+        run: |
+            echo "good bye"
+            echo "good bye2"
